2010-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-syntax-table): Simplify.

	* lpath.el: Fbind set-char-table-range for XEmacs 21.4 and SXEmacs 22.1.

	* gnus-art.el (article-treat-non-ascii): Use put-char-table instead of
	set-char-table-range for XEmacs.

2010-11-10  Glenn Morris  <rgm@gnu.org>

	* time-date.el (time-to-seconds): Always an alias on Emacs,
	never a real function.
	(with-no-warnings): Remove compat stub, now unused.
	(time-less-p): Doc fix.
	(time-to-number-of-days): Simplify.

	* smime.el (from): Remove unused declaration.

	* gnus-util.el (with-no-warnings): Remove compat stub, now unused.
	(gnus-float-time): On Emacs, always an alias.

	* ecomplete.el (with-no-warnings): Remove compat stub, now unused.
	(ecomplete-add-item): Use float-time on Emacs, else gnus-float-time.

2010-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el: Don't use ignore-errors in the top level form since it
	is unavailable in XEmacs even if cl is loaded.

	* gnus-art.el (org-entities): Bind it.

2010-11-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (browse-url-mailto): Autoload.

	* gnus-art.el (article-treat-non-ascii): New command and keystroke.

	* message.el (message-subject-trailing-was-ask-regexp): A ] in a []
	regexp doesn't need quoting.

2010-11-09  Sven Joachim  <svenjoac@gmx.de>

	* message.el (message-subject-trailing-was-ask-regexp)
	(message-subject-trailing-was-regexp): Match was: in addition to was.

2010-11-09  Glenn Morris  <rgm@gnu.org>

	* nnbabyl.el (nnbabyl-request-move-article, nnbabyl-delete-mail)
	(nnbabyl-check-mbox): Use point-at-bol.

2010-11-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-browse-url): Call browse-url-mailto for mailto: links.

	* message.el (message-mailto): New function.
	(message-mailto): Should accept other parameters.
	(message-mailto): Remove since it duplicates browse-url-mailto
	functionality.

2010-11-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>
